--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="KANYE SAID..."
+      href="https://psv4.userapi.com/c235031/u222277249/docs/d58/b75bfef76311/FAV.png?extra=tKsIlQQUN8ZeiCzauXxqex2tVPVH6JhCiQGGV7P3uidL2iAK9x3iN6VlDFHfTputLSS9fGXZ_aJ10WfeceVlp_E5G8Rqy-91RusPYTa6QgZ8C9raNblkeubFn7J5nAHeRjbYkHbnYD9d5lDu_19hcQ9XSZ4"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -28,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>KANYE SAID...</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
