--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link
-      rel="KANYE SAID..."
+      rel="icon"
       href="https://psv4.userapi.com/c235031/u222277249/docs/d58/b75bfef76311/FAV.png?extra=tKsIlQQUN8ZeiCzauXxqex2tVPVH6JhCiQGGV7P3uidL2iAK9x3iN6VlDFHfTputLSS9fGXZ_aJ10WfeceVlp_E5G8Rqy-91RusPYTa6QgZ8C9raNblkeubFn7J5nAHeRjbYkHbnYD9d5lDu_19hcQ9XSZ4"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
